# backend-digiwise-fakenews

./: Dockerfile  README.md  main.py  model.py  pyproject.toml  scraper.py
