[tool.poetry]
name = "backend-digiwise-fakenews"
version = "0.1.0"
description = ""
authors = ["rifqoi <alfurqon.rifqi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
newspaper3k = "^0.2.8"
sentence-transformers = "^2.2.2"
transformers = "4.21.0"
datasets = "^2.14.5"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
